# tinylog

./: .gitignore  CMakeLists.txt
examples/: main.cpp
include/tinylog/: formatter.hpp  level.hpp  log_msg.hpp  logger.hpp  tinylog.hpp
include/tinylog/sink/: ostream_sink.hpp  sink.hpp
